syntax = "proto3";

package program;
option go_package = "github.com/ZweTyy/Ricart-Argawala/internal/pb;pb";

message Request {
  int32 requester_id = 1;
  int64 timestamp    = 2;
  string request_id  = 3;
}

message Reply {
  int32 replier_id   = 1;
  int64 timestamp    = 2;
  string request_id  = 3;
}

message Ack { bool ok = 1; }

service RicartAgrawala {
  rpc RequestCS(Request) returns (Ack);
  rpc ReplyCS(Reply) returns (Ack);
}
